# routes/api.php
@@ -5,8 +5,8 @@ declare(strict_types=1);
 use App\Http\Controllers\PageController;
 use Illuminate\Support\Facades\Route;
 
-Route::prefix('page')
+Route::prefix('pages')
     ->controller(PageController::class)
-    ->group(static function () {
-        Route::get('/search', 'search');
+    ->group(function () {
+        Route::get('/search', 'search')->middleware('throttle:100,1');
     });
